# tasklog

./: Cargo.toml  Makefile  README.md  README.zh-CN.md  shell.nix
.github/workflows/: android.yml  linux.yml  macos.yml  web.yml
lib/cutil/: Cargo.toml
lib/cutil/src/: http.rs  lib.rs  str.rs  time.rs
lib/sqldb/: Cargo.toml
tasklog/: Cargo.toml
tasklog/pkg/deb/: README.md  create_deb.sh  init.sh  install_deb.sh  uninstall_deb.sh
tasklog/pkg/deb/package/DEBIAN/: control
tasklog/pkg/deb/package/usr/share/applications/: slint-template.desktop  tasklog.desktop
tasklog/script/: cp-ui-base-to-slint-template.sh  extract-tr-unique.sh  init-project.sh
tasklog/src/: desktop.rs  lib.rs  version.rs
tasklog/src/config/: conf.rs  data.rs  mod.rs
tasklog/src/db/: def.rs  mod.rs
tasklog/src/logic/: archive.rs  clipboard.rs  confirm_dialog.rs  examples.rs  mod.rs  popup_action.rs  record.rs  setting.rs  statistic.rs  tr.rs  util.rs
tasklog/ui/: android-window.slint  desktop-window.slint  logic.slint  store.slint  theme.slint  util.slint  web-window.slint
tasklog/ui/base/: about.slint  audio-control.slint  blank-welcome.slint  btn.slint  charbar.slint  date-picker.slint  def.slint  dialog.slint  elevated-btn.slint  flash-progress.slint  flickable-with-scrollbar.slint  gain-focus.slint  help.slint  icon-btn.slint  led.slint  line-input.slint  paragraph.slint  popup-action.slint  process-step.slint  progress-bar.slint  search.slint  select.slint  setting-entry.slint  slider.slint  status-bar.slint  tag.slint  toast.slint  txtedit.slint  video-control.slint  widgets.slint
tasklog/ui/panel/: def.slint
tasklog/ui/panel/desktop/: archive.slint  home.slint  panel.slint  record-edit-dialog.slint  record-plan-dialog.slint  record.slint  record.slint.bak  statistic.slint
tasklog/ui/panel/mobile/: home.slint  panel.slint
tasklog/ui/panel/setting/: desktop.slint  mobile.slint
tasklog/ui/panel/setting/components/: model.slint  preference.slint  proxy.slint
tasklog/web/: index.html
tasklog/windows/: version.h
tr-helper/: Cargo.toml  README.md  build.rs
tr-helper/src/: main.rs  tr.rs
