[workspace]
exclude = []
resolver = "2"
members = ["tasklog", "lib/*", "tr-helper"]

[workspace.package]
license = "MIT"
edition = "2024"
version = "0.1.0"
readme = "README.md"
# rust-version = "1.87"
authors = ["Heng30 <rongheng30@gmail.com>"]
keywords = ["Rust", "GUI", "Slint", "cross-platform"]
homepage = "https://github.com/Heng30/tasklog"
repository = "https://github.com/Heng30/tasklog"
description = "It's a task track App."

# more information see: `https://sharnoff.io/blog/why-rust-compiler-slow`
[profile.dev]
lto = false
debug = false
opt-level = 0
incremental = true

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"
codegen-units = 1
incremental = true

[workspace.dependencies]
cbc = "0.1"
log = "0.4"
hex = "0.4"
aes = "0.8"
sqlx = "0.8"
rand = "0.9"
toml = "0.9"
clap = "4.5"
duct = "1.0"
uuid = "1.17"
serde = "1.0"
regex = "1.11"
bytes = "1.10"
tokio = "1.45"
slint = "1.12"
image = "0.25"
anyhow = "1.0"
chrono = "0.4"
reqwest = "0.12"
getrandom = "0.3"
once_cell = "1.21"
serde_json = "1.0"
webbrowser = "1.0"
serde_with = "3.13"
env_logger = "0.11"
slint-build = "1.12"
wasm-bindgen = "0.2"
async-openai = "0.29"
display-info = "0.5"
embed-resource = "3.0"
android_logger = "0.15"
android_clipboard = "0.1.0"

# maybe outdated
qrcode = "0.14"
walkdir = "2.5"
clipboard = "0.5"
derivative = "2.2"
console_log = "1.0"
crypto-hash = "0.3"
platform-dirs = "0.3"

cutil = { path = "lib/cutil" }
sqldb = { path = "lib/sqldb" }
