[package]
name = "cutil"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cbc = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
crypto-hash = { workspace = true, optional = true }
reqwest = { workspace = true, features = [
  "native-tls-vendored",
], optional = true }

[features]
fs = []
number = []
default = []
str = ["dep:rand"]
time = ["dep:chrono"]
http = ["reqwest/json", "reqwest/socks", "dep:bytes"]
all = ["fs", "time", "http", "crypto", "str", "number"]
crypto = ["dep:aes", "dep:cbc", "dep:hex", "dep:crypto-hash"]
